--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
     "firebase": "^7.14.4",
+    "jshint": "^2.13.6",
     "rxjs": "~6.5.1",
     "tslib": "^1.10.0",
+    "TSLint": "npm:tslint@~6.1.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
