--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
+    "@smart-webcomponents-angular/scheduler": "^15.0.2",
+    "common": "^0.2.5",
     "firebase": "^7.24.0",
     "jshint": "^2.13.6",
     "rxjs": "~6.5.1",
@@ -43,7 +45,7 @@
     "@ionic/angular-toolkit": "^2.1.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.11.1",
+    "@types/node": "^12.20.55",
     "codelyzer": "^5.1.2",
     "firebase-tools": "^8.0.0",
     "fuzzy": "^0.1.3",
