--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@ionic/angular-toolkit": "^2.1.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/jquery": "^3.5.16",
     "@types/node": "^12.20.55",
     "codelyzer": "^5.1.2",
     "firebase-tools": "^8.0.0",
